--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,26 +1,18 @@
-name: Build and Push Docker Image
-
+name: Build
 on:
-  push:
-    branches: [ main ]
-    tags: [ 'v*' ]
   workflow_dispatch:
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    
     steps:
-    - name: Checkout code
+    - name: Checkout
       uses: actions/checkout@v4
       
-    - name: Set up Docker Buildx
+    - name: Set up Buildx
       uses: docker/setup-buildx-action@v3
       
-    - name: Log in to GitHub Container Registry
+    - name: GitHub Container Registry
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
