--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,6 +13,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Get short SHA
+      id: sha
+      run: echo "short_sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      
     - name: Set up Buildx
       uses: docker/setup-buildx-action@v3
       
